[tool.poetry]
name = "stapp"
version = "0.1.0"
description = "prediction dashboard"
authors = ["Algorhythmic <davidalexanderdunn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.2.2"
plotly-express = "^0.4.1"
numpy = "^1.26.4"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
